web/client/stylesheets/pages/dashboard.scss
@import 'bourbon/bourbon'; // http://bourbon.io/

@import '../partials/variables'; // colors, fonts etc...

@import '../partials/mixins'; // custom mixins

@import '../partials/layout'; // responsive grid and media queries


// LANDING PAGE CSS



// END LANDING PAGE CSS

// CUSTOM CSS
a:hover {
	text-decoration: none;
}
a:visited{
	text-decoration:none;
}
.cd-header {
	width: 100%;
	height: 75px !important;
	.navbar {
		position: relative;
	}
}

.filter {
	position: relative;
	.glyphicon-remove {
		color: #9a9a9a;
		font-size: 14px;
		position: absolute;
		top: 5px;
		right: 0px;
		display: none;
	}

	&:hover {
		.glyphicon-remove {
			display: block;
		}
	}
}

.item-div {
	vertical-align: bottom;
	position: relative;
	.item-wrapper {
		min-height: 300px;
		max-height: 300px;
		overflow: hidden;
		position: relative;
		img {
			position: absolute;
			bottom: 0;
			width: 100%;
		}
	}
}

.item-name {
	bottom: 0;
	width: 100%;
	padding: 5px;
	background-color: white;
	z-index: 3;
	h4 {
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		font-weight:800;
	}
	h6{
		text-align: center;
		font-weight:600;
	}
	h3{
		text-align: center;
		color:red;
	}
}


.item-delete {
	position: absolute;
	right: 0;
	top: 0;
	font-size: 30px;
}

.cd-filter-block {
	ul {
		list-style-type: none;
		padding-left: 10px;
	}
}

.product-origin{
  position: absolute;
  top: 0;
  left: 0;
  width: 15% !important;
  z-index: 2;
}
// end CUSTOM CSS


/* -------------------------------- 

Primary style

-------------------------------- */

*, *::after, *::before {
	@include box-sizing(border-box);
}

html {
	font-size: 62.5%;
}

html * {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

body {
	font: {
		size: 1.6rem;
		family: $primary-font; // variables inside partials > _variables.scss
	}
	color: $color-1;
	background-color: lighten($color-4, 30%);
}

a {
	color: $color-2;
	text-decoration: none;
}

/* -------------------------------- 

Main Components 

-------------------------------- */

.cd-header {
	position: relative;
	height: 150px;
	background-color: $color-1;

	h1 {
		color: $color-3;
		line-height: 150px;
		text-align: center;
		font-size: 2.4rem;
		font-weight: 300;
	}

	@include MQ(L) {
		height: 180px;

		h1 {
			line-height: 180px;
		}
	}
}

.cd-main-content {
	position: relative;
	min-height: 100vh;
	@include clearfix;

	&.is-fixed {
		.cd-tab-filter-wrapper {
			position: fixed;
			top: 0;
			left: 0;
			width: 100%;
		}

		.cd-gallery {
			padding-top: 26px+$tab-filter-height;
		}

		.cd-filter {
			position: fixed;
			height: 100vh;
			overflow: hidden;

			form {
				height: 100vh;
				overflow: auto;
				-webkit-overflow-scrolling: touch;
			}
		}

		.cd-filter-trigger {
			position: fixed;
		}

		@include MQ(M) {
			.cd-gallery {
				padding-top: 40px+$tab-filter-height;
			}
		}

		@include MQ(L) {
			.cd-gallery {
				padding-top: 50px+$tab-filter-height;
			}
		}
	}
}

/* -------------------------------- 

xtab-filter 

-------------------------------- */

.cd-tab-filter-wrapper {
	background-color: $color-3;
	box-shadow: 0 1px 1px rgba(#000, .08);
	z-index: 1;
	@include clearfix;
}

.cd-tab-filter {
	/* tabbed navigation style on mobile - dropdown */
	position: relative;
	height: $tab-filter-height;
	width: 140px;
	margin: 0 auto;
	z-index: 1;

	&::after { 
		/* small arrow icon */
		content:'';
		position: absolute;
		right: 14px;
		@include center(y); // see partials > mixins

		display: inline-block;
		width: 16px;
		height: 16px;

		background: url('../img/cd-icon-arrow.svg') no-repeat center center;

		@include transition(all .3s);
		pointer-events: none;
	}

	ul {
		position: absolute;
		top: 0;
		left: 0;

		background-color: $color-3;
		box-shadow: inset 0 -2px 0 $color-2;
	}

	li {
		display: none; 

		&:first-child {
			/* this way the placehodler is alway visible */
			display: block; 
		}
	}

	a {
		display: block;
		/* set same size of the .cd-tab-filter */
		height: $tab-filter-height;
		width: 140px;
		line-height: $tab-filter-height;
		padding-left: 14px;

		&.selected {
			background: $color-2;
			color: $color-3;
		}
	}

	&.is-open {

		&::after {
			/* small arrow rotation */
			@include transform(translateY(-50%) rotate(-180deg));  
		}

		ul {
			box-shadow: inset 0 -2px 0 $color-2, 0 2px 10px rgba(#000, .2);
		}

		ul li {
			display: block;
		}

		.placeholder a {
			/* reduces the opacity of the placeholder on mobile when the menu is open */
			opacity: .4; 
		}
	}

	@include MQ(M) {
		/* tabbed navigation style on medium devices */
		width: auto;
		cursor: auto;

		&::after {
			/* hide the arrow */
			display: none;
		}

		ul {
			background: transparent;
			position: static;
			box-shadow: none;
			text-align: center;
		}

		li {
			display: inline-block;

			&.placeholder {
				display: none !important; 
			}
		}

		a {
			display: inline-block;
			padding: 0 1em;
			width: auto;

			color: $color-4;
			text-transform: uppercase;
			font-weight: 700;
			font-size: 1.3rem;

			.no-touch &:hover {
				color: $color-2;
			}

			&.selected {
				background: transparent;
				color: $color-2;
				/* create border bottom using box-shadow property */
				box-shadow: inset 0 -2px 0 $color-2;
			}
		}

		&.is-open {
			ul li {
				display: inline-block;
			}
		}
	}

	@include MQ(L) {
		/* tabbed navigation on big devices */
		width: 100%;
		float: right;
		margin: 0;
		@include transition(width .3s);

		&.filter-is-visible {
			/* reduce width when filter is visible */
			width: 80%;
		}
	}
}
/* ... */

